fixed homepage alignment

--- a/client-side/src/index.css
+++ b/client-side/src/index.css
@@ -43,6 +43,15 @@ main {
   min-height: 100vh;
 }
 
+.homepage {
+  color: white;
+  top: 50%;
+  left: 50%;
+  position: fixed;
+  margin-top: -50px;
+  margin-left: -130px;
+}
+
 /* ###STYLING### 
 Login Form  */
 
@@ -201,7 +210,7 @@ Owned List Page  */
   border-radius: 5px;
   /* margin: 1rem; */
   display: flex;
-  justify-content: space-between; 
+  justify-content: space-between;
   align-items: center; /* Vertically center buttons */
   align-content: center;
 }
